# INF3995

p3-master/: .gitmodules  presentationOrale.pptx  rapportFinal.docx
p3-master/backend/: .gitignore  CMakeLists.txt  README(libraries).md
p3-master/backend/lib/: CMakeLists.txt
p3-master/backend/portConfigurations/: config1.conf  config2.conf  config3.conf
p3-master/backend/projects/: CMakeLists.txt
p3-master/backend/projects/database/: MinerDbManager.cpp
p3-master/backend/projects/miner/: BlockchainSingleton.hpp  CMakeLists.txt  main.cpp  minerTests.hpp  request.h
p3-master/backend/projects/miner/blockchain/: Block.cpp  Block.h  Blockchain.cpp  Blockchain.h
p3-master/backend/projects/miner/hashCreation/: sha256.hpp
p3-master/backend/projects/miner/minerCommunication/: MinerCommunication.cpp  MinerCommunication.h
p3-master/backend/projects/server/: CMakeLists.txt  MockRequest.json  MockRequest2.json  MockRequest3.json  main.cpp  zmqSingelton.h
p3-master/backend/projects/server/LogsManager/: LogsManager.cpp
p3-master/backend/projects/server/RestAPI/: AndroidAppAPI.cpp  DatabaseManager.cpp  EntryPoint.cpp  PcAppAPI.cpp  RestAPI.h  UtilityClass.cpp
p3-master/backend/projects/server/serverZMQ/: ServerZmq.cpp  ServerZmq.h
p3-master/backend/src/: CMakeLists.txt  requestType.hpp
p3-master/backend/src/services/: ReadConfig.cpp  ReadConfig.hpp  zmqMessageHandler.hpp
p3-master/mobile/: build.gradle
p3-master/mobile/app/: build.gradle
p3-master/mobile/app/src/main/: AndroidManifest.xml
p3-master/mobile/gradle/wrapper/: gradle-wrapper.properties
p3-master/pc_app/: main.py
p3-master/suivi/: Rapport_Avancement_05042020.docx  Rapport_Avancement_08032020.docx  Rapport_Avancement_10022020.docx  Rapport_Avancement_17022020.docx  Rapport_Avancement_29032020.docx
(+32 files in other folders)
